--- a/docs/css/main.scss
+++ b/docs/css/main.scss
@@ -103,3 +103,12 @@ body {
 .display {
    font-family: "Streetwear";
 }
+
+//Tabs on home page should have same height
+#installation pre {
+  min-height: 130px;
+}
+
+#usage pre {
+  min-height: 730px;
+}
