Tweak documentation (search, sidebar..)

--- a/docs/_includes/docs_nav.html
+++ b/docs/_includes/docs_nav.html
@@ -19,4 +19,13 @@
     </div>
   </div>
 {% endfor %}
+   <div class="panel panel-default">
+    <div class="panel-heading">
+      <h4 class="panel-title">
+        <a role="button" href="{{site.baseurl}}/docs/fluentast-core">
+          API
+        </a>
+      </h4>
+    </div>
+   </div>
 </div>
