--- a/docs/_includes/js_files.html
+++ b/docs/_includes/js_files.html
@@ -1,7 +1,7 @@
 <script>
   var baseurl = '{{ site.baseurl }}'
 </script>
-<script src="//code.jquery.com/jquery-1.10.2.min.js"></script>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js></script>
 <script src="{{ "/js/bootstrap.min.js" | prepend: site.baseurl }} "></script>
 <script src="{{ "/js/typeahead.bundle.min.js" | prepend: site.baseurl }} "></script>
 <script src="{{ "/js/fuzzysearch.min.js" | prepend: site.baseurl }} "></script>
